# METIS

./: CMakeLists.txt
libmetis/: CMakeLists.txt
